--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <h1>Hellor World Angular!</h1>
 <h2>Teste</h2>
 <p>Alguma coisa</p>
+<div>
+    <a href="#">Clique aqui!</a>
+</div>
 <app-first-component></app-first-component>
