exemplos de diretivas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <h2>Teste</h2>
 <p>Alguma coisa</p>
 <div>
-    <a href="#">Clique aqui!</a>
+	<a href="#">Clique aqui!</a>
 </div>
 <app-first-component></app-first-component>
 <app-parent-data [name]="userName" [userData]="userData"></app-parent-data>
+<app-diretivas></app-diretivas>
