exemplos de condicionais

--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,5 +1,12 @@
-<h2>Meu primeiro componente!</h2>
-<h1 class="title">Nome: {{ name }} </h1>
-<h1>Idade: {{ age }} </h1>
-<a href="#">Veja mais sobre mim!</a>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ipsam eos natus dolore. Incidunt numquam asperiores dolor maxime molestias velit quod ut ullam laborum saepe, impedit facilis corporis, quae accusamus!</p>
+<div class="class">
+	<h2>Meu primeiro componente!</h2>
+	<h1 class="title">Nome: {{ name }}</h1>
+	<h1>Idade: {{ age }}</h1>
+	<a href="#">Veja mais sobre mim!</a>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+		ipsam eos natus dolore. Incidunt numquam asperiores dolor maxime
+		molestias velit quod ut ullam laborum saepe, impedit facilis corporis,
+		quae accusamus!
+	</p>
+</div>
