--- a/src/app/components/parent-data/parent-data.component.html
+++ b/src/app/components/parent-data/parent-data.component.html
@@ -1,3 +1,5 @@
-<p>{{ name }}</p>
-<p>Cargo: {{ userData.cargo }}</p>
-<p>Email: {{ userData.email }}</p>
+<div class="class">
+	<p>{{ name }}</p>
+	<p>Cargo: {{ userData.cargo }}</p>
+	<p>Email: {{ userData.email }}</p>
+</div>
