--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
 <app-first-component></app-first-component>
 <app-parent-data [name]="userName" [userData]="userData"></app-parent-data>
 <app-diretivas></app-diretivas>
+<app-renderizacao-condicional></app-renderizacao-condicional>
