--- a/src/app/components/diretivas/diretivas.component.html
+++ b/src/app/components/diretivas/diretivas.component.html
@@ -1,6 +1,8 @@
-<h2 [ngStyle]="{ 'font-size': '12px;' }">
-	Testando diretiva de estilos / style
-</h2>
-<h2 [ngClass]="classes">Testando diretiva de estilos / style 1</h2>
-<h2 [ngClass]="teste()">Testando diretiva de estilos / style 2</h2>
-<h2 [ngClass]="underline">Testando diretiva de estilos / style 3</h2>
+<div class="class">
+	<h2 [ngStyle]="{ 'font-size': '12px;' }">
+		Testando diretiva de estilos / style
+	</h2>
+	<h2 [ngClass]="classes">Testando diretiva de estilos / style 1</h2>
+	<h2 [ngClass]="teste()">Testando diretiva de estilos / style 2</h2>
+	<h2 [ngClass]="underline">Testando diretiva de estilos / style 3</h2>
+</div>
