--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,4 @@
 <app-parent-data [name]="userName" [userData]="userData"></app-parent-data>
 <app-diretivas></app-diretivas>
 <app-renderizacao-condicional></app-renderizacao-condicional>
+<app-eventos></app-eventos>
