exemplos de emissão de eventos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,4 @@
 <app-diretivas></app-diretivas>
 <app-renderizacao-condicional></app-renderizacao-condicional>
 <app-eventos></app-eventos>
+<app-emissor></app-emissor>
