--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,4 @@
 <app-renderizacao-condicional></app-renderizacao-condicional>
 <app-eventos></app-eventos>
 <app-emissor></app-emissor>
+<app-list-render></app-list-render>
