exemplos de two way binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,4 @@
 <app-emissor></app-emissor>
 <app-list-render></app-list-render>
 <app-pipes></app-pipes>
+<app-two-way-binding></app-two-way-binding>
