--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,8 @@
+<p>header</p>
+<nav>
+	<a routerLink="/">Home</a>
+	<a routerLink="/list">Lista</a>
+</nav>
 <h1>Hellor World Angular!</h1>
-<h2>Teste</h2>
-<p>Alguma coisa</p>
-<div>
-	<a href="#">Clique aqui!</a>
-</div>
-<app-first-component></app-first-component>
-<app-parent-data [name]="userName" [userData]="userData"></app-parent-data>
-<app-diretivas></app-diretivas>
-<app-renderizacao-condicional></app-renderizacao-condicional>
-<app-eventos></app-eventos>
-<app-emissor></app-emissor>
-<app-list-render></app-list-render>
-<app-pipes></app-pipes>
-<app-two-way-binding></app-two-way-binding>
+<router-outlet></router-outlet>
+<p>footer</p>
